@@ -29,8 +29,9 @@ requires:
   Class::Utils: 0.03
   Error::Pure: 0.15
   Exporter: 0
-  ISO::639::3: 0
   List::MoreUtils: 0
+  List::Util: 0
+  Locale::Language: 0
   Mo: 0
   Mo::utils: 0.03
   Readonly: 0
