@@ -23,8 +23,9 @@ requires 'Error::Pure' => 0.15;
 requires 'Exporter' => 0;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.03;
-requires 'ISO::639::3' => 0;
 requires 'List::MoreUtils' => 0;
+requires 'List::Util' => 0;
+requires 'Locale::Language' => 0;
 requires 'Readonly' => 0;
 requires 'Unicode::UTF8' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Wikibase-Datatype/issues',
