@@ -1,4 +1,5 @@
 0.11
+ - Fix check_language().
  - Improve example in Form documentation.
  - Improve example in Sense documentation.
 
